--- a/webpage/contacts.html
+++ b/webpage/contacts.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Explore More</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-image: url("8.rome.jpg");
+            background-repeat:no-repeat;
+            background-position: center;
+            background-size: cover;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #ddddddf8;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+            color:orange;
+            background-color:#b3c0b96c;
+            transition: transform 0.3s ease-in-out;
+           
+        }
+        .container:hover{
+            transform: scale(1.2);
+        }
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
+   
+    <div class="container" style="margin-top: 30px;">
+        <h2>Contact Us</h2>
+        <p>Email: contact@example.com</p>
+        <p>Phone: +123456789</p>
+    </div>
     
+    <div class="container" style="margin-top: 30px;">
+        <h2>Way to Rome</h2>
+        <p>Find the best routes and travel tips to reach Rome.</p>
+        <a href="https://www.google.com/maps/place/Rome" class="button" target="_blank">Find on Map</a>
+    </div>
 </body>
 </html>
