--- a/webpage/achievement.html
+++ b/webpage/achievement.html
@@ -4,43 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Achievements of Rome</title>
-    <style>
-        body {
-            background-image: url("10.rome.jpg");
-            background-position: center;
-            color:greenyellow;
-            font-family: Arial, sans-serif;
-        
-            /* margin: 40px;
-            padding: 20px; */
-        }
-        h1 {
-            color:#ffffff;
-            text-align: center;
-        }
-        h2 {
-            color:#ff0000;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background:transparent;
-            padding: 20px;
-            
-        }
-        ul {
-            line-height: 1.6;
-        }
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            padding: 10px;
-            background:grey;
-            border-radius: 10px;
-            color:#ffffff;
-            font-size: 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="achievement.css">
 </head>
 <body>
     <div class="container">
