--- a/webpage/home.html
+++ b/webpage/home.html
@@ -3,7 +3,7 @@
 <head>
         <title>HTML Div Layout</title>
         <script src="https://kit.fontawesome.com/38be9f28af.js" crossorigin="anonymous"></script> 
-        <link rel="stylesheet" href="layouti.css" > 
+        <link rel="stylesheet" href="home.css" > 
 </head>
 <body>
     <div class="container">
@@ -20,6 +20,12 @@
                         <li><a href="contacts.html">Contacts</a></li>
                     </ul>
                  </nav>   
+            </div>
+            <div class="image">
+                <img src="a.jpg" alt="image1">
+                <img src="b.jpg" alt="image2">
+                <img src="c.jpg" alt="image3">
+
             </div>
            <div>
            <header >
