--- a/webpage/home.html
+++ b/webpage/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <title>HTML Div Layout</title>
+        <title>HOME</title>
         <script src="https://kit.fontawesome.com/38be9f28af.js" crossorigin="anonymous"></script> 
         <link rel="stylesheet" href="home.css" > 
 </head>
@@ -11,7 +11,7 @@
             <h1>Rome</h1>
         </div>
         
-        <div class="wrapper clearfix">
+        <div class="code">
             <div class="nav">
                 <nav >
                     <ul>
@@ -25,7 +25,6 @@
                 <img src="a.jpg" alt="image1" onclick="showAlert('You clicked image A')">
                 <img src="b.jpg" alt="image2" onclick="showAlert('You clicked image B')">
                 <img src="c.jpg" alt="image3" onclick="showAlert('You clicked image C')">
-
             </div>
            <div>
            <header >
@@ -48,7 +47,7 @@
         </div>
             <div class="footer">
                 <footer>
-                    <p>Created by Allan | <span id="date"></span></p>
+                    <p>Created by Allan |&copy; <span id="date"></span></p>
                 </footer>
             </div>
             <script>
